src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__ir_enabler__tests__main_with_abort_prompt.snap
---
source: src/configure/ui/ir_enabler.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃┌ Question ─────────────────────────────────────┐┌ Camera Preview ───────────────────────────────┐┃"
"┃│                Please wait...                 ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃└───────────────────────────────────────────────┘│                                               │┃"
"┃┌ Modifiable UVC Controls ──────────────────────┐│                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                       ╔════════════════════════════════════════════════╗                       │┃"
"┃│                       ║   Are you sure you want to abort the process?  ║                       │┃"
"┃│                       ║                Yes <y>   No <n>                ║                       │┃"
"┃│                       ╚════════════════════════════════════════════════╝                       │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃└───────────────────────────────────────────────┘└───────────────────────────────────────────────┘┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                                            Quit <Esc>                                            ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
