src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__ir_enabler__tests__main_with_controls.snap
---
source: src/configure/ui/ir_enabler.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃┌ Question ─────────────────────────────────────┐┌ Camera Preview ───────────────────────────────┐┃"
"┃│                Please wait...                 ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃└───────────────────────────────────────────────┘│                                               │┃"
"┃┌ Modifiable UVC Controls ──────────────────────┐│                                               │┃"
"┃│unit: 1 selector: 1                            ││                                               │┃"
"┃│   initial: [1]                                ││                                               │┃"
"┃│   current: [1]                                ││                                               │┃"
"┃│   maximum: [1]                                ││                                               │┃"
"┃│unit: 2 selector: 2                            ││                                               │┃"
"┃│   initial: [2, 2]                             ││                                               │┃"
"┃│   current: [2, 2]                             ││                                               │┃"
"┃│   maximum: [2, 2]                             ││                                               │┃"
"┃│unit: 3 selector: 3                            ││                                               │┃"
"┃│   initial: [3, 3, 3]                          ││                                               │┃"
"┃│   current: [3, 3, 3]                          ││                                               │┃"
"┃│   maximum: [3, 3, 3]                          ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃└───────────────────────────────────────────────┘└───────────────────────────────────────────────┘┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                                            Quit <Esc>                                            ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
