src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__ir_enabler__tests__main_with_image.snap
---
source: src/configure/ui/ir_enabler.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃┌ Question ─────────────────────────────────────┐┌ Camera Preview ───────────────────────────────┐┃"
"┃│                Please wait...                 ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃└───────────────────────────────────────────────┘│                    ▄  ▄▄ ▄▄                   │┃"
"┃┌ Modifiable UVC Controls ──────────────────────┐│                 ▄▄▄▄▄▄▄▄▄▄▄ ▄▄                │┃"
"┃│                                               ││              ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ ▄▄             │┃"
"┃│                                               ││              ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄        ▄    │┃"
"┃│                                               ││    ▄▄     ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄     ▄▄  ▄ │┃"
"┃│                                               ││ ▄  ▄▄▄    ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄    ▄▄▄  ▄ │┃"
"┃│                                               ││ ▄▄ ▄▄▄  ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ ▄▄▄▄▄▄ │┃"
"┃│                                               ││ ▄▄▄▄▄▄  ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀ ▄▄▄▄▄▀ │┃"
"┃│                                               ││ ▀▄▄▄▄▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▄▄▄▀  │┃"
"┃│                                               ││  ▀▀▄▄ ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▀   │┃"
"┃│                                               ││    ▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀     │┃"
"┃│                                               ││     ▀▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄      │┃"
"┃│                                               ││     ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄    │┃"
"┃│                                               ││     ▀▄▄▄▀▄▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▀▀▄▀▄▄▀    │┃"
"┃│                                               ││      ▀▄▄ ▀▄▀▀▀▀▀▄▄▄▄▄▄▄▄▄▄▄▄▄▄▀▀▀▀  ▄▀▄▄▀     │┃"
"┃│                                               ││       ▀▄▄ ▀     ▀▀▀▀▀▀▀▀▀▀▀▀▀▀     ▄▀ ▄▀      │┃"
"┃│                                               ││        ▀▀▄                         ▀ ▄▀       │┃"
"┃│                                               ││          ▀▄                          ▀        │┃"
"┃│                                               ││           ▀                                   │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃│                                               ││                                               │┃"
"┃└───────────────────────────────────────────────┘└───────────────────────────────────────────────┘┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                                            Quit <Esc>                                            ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
