src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__ir_enabler__tests__menu_empty.snap
---
source: src/configure/ui/ir_enabler.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃              The tool will iterate through the UVC camera controls and modify them.              ┃"
"┃┌ Device settings ───────────────────────────────────────────────────────────────────────────────┐┃"
"┃│ Path:  (not a grey camera device)                                                              │┃"
"┃│ Number of emitters: 0                                                                          │┃"
"┃│ Resolution height: auto                                                                        │┃"
"┃│ Resolution width: auto                                                                         │┃"
"┃│ FPS: auto                                                                                      │┃"
"┃└────────────────────────────────────────────────────────────────────────────────────────────────┘┃"
"┃┌ Search settings (advanced) ────────────────────────────────────────────────────────────────────┐┃"
"┃│ Manual validation: false                                                                       │┃"
"┃│ Images to analyze in auto validation: 0                                                        │┃"
"┃│ Light difference significance factor: 0                                                        │┃"
"┃│ Rejection threshold per control: none                                                          │┃"
"┃│ Increment step: 0                                                                              │┃"
"┃└────────────────────────────────────────────────────────────────────────────────────────────────┘┃"
"┃         For more explanation, visit https://github.com/EmixamPP/linux-enable-ir-emitter          ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                           Navigate <↑↓>   Continue <Enter>   Quit <Esc>                          ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
