src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__ir_enabler__tests__menu_start.snap
---
source: src/configure/ui/ir_enabler.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃              The tool will iterate through the UVC camera controls and modify them.              ┃"
"┃┌ Device settings ───────────────────────────────────────────────────────────────────────────────┐┃"
"┃│ Path:  (not ╔════════════════════════════════════════════════════════════════════╗             │┃"
"┃│ Number of em║   Be patient, never abort the process without the dedicated key;   ║             │┃"
"┃│ Resolution h║                you could break the camera firmware.                ║             │┃"
"┃│ Resolution w║   If the process is stuck, e.g. displayed values are not updating  ║             │┃"
"┃│ FPS: auto   ║           something is wrong, you can abort the process.           ║             │┃"
"┃└─────────────║                                                                    ║─────────────┘┃"
"┃┌ Search setti║          For better results, stand in front of the camera          ║─────────────┐┃"
"┃│ Manual valid║          and ensure the room has good, constant lighting.          ║             │┃"
"┃│ Images to an║                                                                    ║             │┃"
"┃│ Light differ║                        Do you want to start?                       ║             │┃"
"┃│ Rejection th║                          Yes <y>   No <n>                          ║             │┃"
"┃│ Increment st╚════════════════════════════════════════════════════════════════════╝             │┃"
"┃└────────────────────────────────────────────────────────────────────────────────────────────────┘┃"
"┃         For more explanation, visit https://github.com/EmixamPP/linux-enable-ir-emitter          ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                           Navigate <↑↓>   Continue <Enter>   Quit <Esc>                          ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
