src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__ir_enabler__tests__menu_valid_values.snap
---
source: src/configure/ui/ir_enabler.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃              The tool will iterate through the UVC camera controls and modify them.              ┃"
"┃┌ Device settings ───────────────────────────────────────────────────────────────────────────────┐┃"
"┃│ Path: /dev/video2                                                                              │┃"
"┃│ Number of emitters: 1                                                                          │┃"
"┃│ Resolution height: 720                                                                         │┃"
"┃│ Resolution width: 1280                                                                         │┃"
"┃│ FPS: 30                                                                                        │┃"
"┃└────────────────────────────────────────────────────────────────────────────────────────────────┘┃"
"┃┌ Search settings (advanced) ────────────────────────────────────────────────────────────────────┐┃"
"┃│ Manual validation: true                                                                        │┃"
"┃│ Images to analyze in auto validation: 30                                                       │┃"
"┃│ Light difference significance factor: 50                                                       │┃"
"┃│ Rejection threshold per control: 5                                                             │┃"
"┃│ Increment step: 1                                                                              │┃"
"┃└────────────────────────────────────────────────────────────────────────────────────────────────┘┃"
"┃         For more explanation, visit https://github.com/EmixamPP/linux-enable-ir-emitter          ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                          Navigate <Tab>   Continue <Enter>   Quit <Esc>                          ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
