src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__ir_enabler__tests__render_menu_strart.snap
---
source: src/configure/ui/ir_enabler.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃┌ Device settings ───────────────────────────────────────────────────────────────────────────────┐┃"
"┃│ Path:  (not a grey camera device)                                                              │┃"
"┃│ Resolution Height: auto                                                                        │┃"
"┃│ Resolution W╔════════════════════════════════════════════════════════════════════╗             │┃"
"┃│ Number of em║  Be patient, do not kill the process; you could break the camera.  ║             │┃"
"┃│ FPS: auto   ║                                                                    ║             │┃"
"┃└─────────────║ For better results, stand in front of the camera and make sure the ║─────────────┘┃"
"┃┌ Search setti║                          room is well lit.                         ║─────────────┐┃"
"┃│ Rejection li║                                                                    ║             │┃"
"┃│ Manual valid║                        Do you want to start?                       ║             │┃"
"┃│ Light differ║                        Confirm <>   Back <>                        ║             │┃"
"┃│ Increment st╚════════════════════════════════════════════════════════════════════╝             │┃"
"┃└────────────────────────────────────────────────────────────────────────────────────────────────┘┃"
"┃         For more explanation, visit https://github.com/EmixamPP/linux-enable-ir-emitter          ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                          Navigate <Tab>   Continue <Enter>   Quit <Esc>                          ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
